# WebServicesManager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  services.json  servicesManager.py  test.sh
data/: services.json
shell/: install.sh  sslrenew.sh
src/: ServicesManager.py  __init__.py  manager.py  services.py
test/: main.py  test_manager.py  test_services.py
